<resources>
    <string name="app_name" translatable="false">EPP BOX</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_toolbar_heading">Sign In</string>
    <string name="sign_in_description_text">Enter your id and password, to log in.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>

    <string name="snack_bar_empty_fields_error">Please fill in the fields above</string>
    <string name="error_message">Error message</string>

    <string name="image_contentDescription">image</string>
    <string name="nav_my_profile">Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="title_activity_profile_scrolling" translatable="false">ProfileScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="tv_profile_edit_name">Name</string>
    <string name="tv_profile_edit_email" translatable="false">Email</string>
    <string name="tv_profile_edit_id">ID</string>
    <string name="tv_profile_edit_phone">Phone</string>
    <string name="save">Save</string>

    <string name="large_text" translatable="false">large text</string>
    <string name="data_saved">User data saved</string>
    <string name="tv_profile_edit_role">Role</string>
    <string name="add_user">Add User</string>

    <string name="please_fill_out">Please\nfill out all fields</string>
    <string name="drawer_menu_session">Session</string>
    <string name="new_passwd">New password</string>
    <string name="confirm_new_passwd">Confirm password</string>
    <string name="update">Update</string>
    <string name="OK">OK</string>
    <string name="fab_profile_save">Fab Profile Save</string>
    <string name="update_passwd">Update password</string>
    <string name="update_passwd_capital">UPDATE PASSWORD</string>
    <string name="verify_passwd">Please verify \nboth password fields</string>
    <string name="passwd_length">Password must be \n6 characters long at least</string>
    <string name="passwd_updated_capital">PASSWORD UPDATED</string>
    <string name="unsuccessful_update">UNSUCCESSFUL UPDATE</string>
    <string name="unsuccessful_update_detail">Recent login required.\nPlease logout, login and try again.</string>
    <string name="enter_email">Please\nenter an email address</string>
    <string name="enter_passwd">Please\nenter a password</string>
    <string name="nothing_to_update">Nothing to update</string>
    <string name="unsaved_changes">UNSAVED CHANGES</string>
    <string name="leave_without_saving">Leave without saving changes?</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="plan" translatable="false">Plan</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="unsuccessful_signin">Unsuccessful sign in</string>
    <string name="profile_updated">Profile updated</string>
    <string name="balance">Balance</string>
    <string name="active">ACTIVE</string>
    <string name="athletes">CROSSFITTERS</string>
    <string name="workouts" translatable="false">WORKOUTS</string>
    <string name="no_workouts_scheduled">NO\nSCHEDULED\nWORKOUTS</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="gallery">Gallery</string>
    <string name="update_picture">Update profile picture</string>
    <string name="january">JAN</string>
    <string name="february">FEB</string>
    <string name="march">MAR</string>
    <string name="april">APR</string>
    <string name="may">MAY</string>
    <string name="june">JUN</string>
    <string name="july">JUL</string>
    <string name="august">AUG</string>
    <string name="september">SEP</string>
    <string name="october">OCT</string>
    <string name="november">NOV</string>
    <string name="december">DEC</string>

    <string name="display_time" translatable="false">%1s %2s</string>
    <string name="error_loading_athletes">Error loading Athletes list</string>
    <string name="workout_title">Workout</string>
    <string name="trainer">Trainer</string>
    <string name="time">Time</string>
    <string name="create_workout">CREATE WORKOUT</string>
    <string name="create_workouts">Create Workouts</string>
    <string name="connectivity">CONNECTIVITY</string>
    <string name="no_access_to_internet">NO ACCESS TO INTERNET</string>
    <string name="reserve_workout">RESERVE</string>
    <string name="reservations">Reservations</string>
    <string name="my_workouts">My Workouts</string>
    <string name="trainers">TRAINERS</string>
    <string name="workout_reserved">Workout reservation updated</string>
    <string name="workout_created">Workout created</string>
    <string name="not_possible_reserve">No longer possible\nto modify reservation.</string>
    <string name="workout_already_created">Workout date already in use</string>
    <string name="cancel_reservation">CANCEL RESERVATION</string>
    <string name="no_balance_to_reserve">Not enough balance.\nPlease renew your service.</string>
    <string name="user_is_inactive">Inactive user.\nPlease renew your service.</string>
    <string name="workouts_calendar">Workout Calendar</string>
    <string name="fab_add_profile" translatable="false">fab add workout</string>
    <string name="update_reservation">"UPDATE\nRESERVATION       "</string>
    <string name="ernesto_carrera" translatable="false">Ernesto Carrera</string>
    <string name="ernesto_carrera_details" translatable="false">Ernesto Carrera tiene 11 años\nde experiencia como coach de\nCrossfit. Es entrenador certificado\nL2 con cursos de especialización\nen Gymnastics, Coach Prep, Coach\npara Atletas Master, Escalamiento,\nAnatomía, Kettlebells, entre otros.\n\nForma parte del equipo de\nespecialistas y conferencistas del\nInstituto Gatorade para Ciencias\ndel Deporte en el área de Crossfit\ny fue embajador patrocinado por\nReebok entre los años 2013 y 2016.\n\nAsí mismo, es especialista en\nseguridad y tácticas defensivas e\ninstructor policial con más de\n20 años de experiencia.</string>

    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="week">Week</string>
    <string name="workout_description">Description</string>
    <string name="workout_dates">Dates</string>
    <string name="pls_select_time">Please select the time</string>
    <string name="date_already_reserved">Date and hour already used</string>
    <string name="pls_select_dates">Please select the workout dates</string>
    <string name="set_time">Pick Time</string>
    <string name="entrenador_l2">L2 certified trainer</string>
    <string name="gabriela_teran" translatable="false">Gabriela Terán</string>
    <string name="capacity">Capacity</string>

    <string name="athletes_min">%1s crossfitters</string>
    <string name="duration">Duration</string>
    <string name="duration_hours">%1s hour%1s</string>
    <string name="create_wo_dialog">Creating %1s workout%1s</string>
    <string name="workout_date">Date</string>
    <string name="wod_capacity_reached">WOD capacity reached</string>
    <string name="confirm_wod_reservation_cancel">Remove workout reservation?</string>
    <string name="attending">Attending</string>
    <string name="workouts_min" translatable="false">Workouts</string>
    <string name="calendar_capital">CALENDAR</string>
    <string name="next_wo">Coming up</string>
    <string name="completed">Completed</string>
    <string name="no_workouts_completed">NO COMPLETED\nWORKOUTS</string>
    <string name="workout_status" translatable="false">WORKOUT STATUS</string>
    <string name="delete_wo_question">Delete Workout?</string>
    <string name="cancel_wo_question">Suspend Workout?</string>
    <string name="wod_is_suspended">This Workout is Suspended</string>
    <string name="reactivate_wo">Activate this Workout?</string>
    <string name="workout_activated">Workout Activated</string>
    <string name="workout_suspended">Workout Suspended</string>
    <string name="trainer_notes">Trainer Notes</string>
    <string name="user_notes">My Notes</string>
    <string name="workout_notes">Workout notes</string>
    <string name="plans_capital">PLANS</string>

    <string name="error_while_regist_user">Error registering user profile:\n\n%1s</string>
    <string name="profile_created">Profile successfully added</string>


</resources>