<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:title=""
            android:checkable="false"
            />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_blue_contacts_24"
            android:title="@string/nav_my_profile"/>

        <item
            android:id="@+id/nav_add_profile"
            android:icon="@drawable/white_add_person_add_24"
            android:title="@string/add_user"/>
        <item
            android:id="@+id/nav_my_workouts"
            android:icon="@drawable/black_playlist_add_check_24"
            android:title="@string/my_workouts"
            />
        <item
            android:id="@+id/nav_all_workouts"
            android:icon="@drawable/black_list_bulleted_24"
            android:title="@string/workouts_min"
            />
        <item
            android:title=""
            android:checkable="false"
            />
        <item
            android:title=""
            android:checkable="false"
            />


    </group>

    <item android:title="@string/drawer_menu_session">

        <menu>

            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/icon_logout_24"
                android:title="@string/nav_sign_out"/>

        </menu>

    </item>


</menu>