<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_rounded_corners_background"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_bottom_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray1"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/update_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rl_bottom_dialog_cancel"
        />

    <RelativeLayout
        android:id="@+id/rl_bottom_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_dialog_header">

        <ImageButton
            android:id="@+id/ib_bottom_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/black_cancel_24" />

        <TextView
            android:id="@+id/tv_bottom_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/ib_bottom_dialog_cancel"
            android:text="@string/cancel" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom_dialog_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/rl_bottom_dialog_cancel"
        app:layout_constraintStart_toStartOf="@+id/rl_bottom_dialog_cancel"
        app:layout_constraintTop_toBottomOf="@+id/rl_bottom_dialog_cancel">


        <ImageButton
            android:id="@+id/ib_bottom_dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/black_delete_24" />

        <TextView
            android:id="@+id/tv_bottom_dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/ib_bottom_dialog_delete"
            android:text="@string/delete" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom_dialog_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/rl_bottom_dialog_delete"
        app:layout_constraintStart_toStartOf="@+id/rl_bottom_dialog_delete"
        app:layout_constraintTop_toBottomOf="@+id/rl_bottom_dialog_delete">



        <ImageButton
            android:id="@+id/ib_bottom_dialog_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/black_folder_24" />

        <TextView
            android:id="@+id/tv_bottom_dialog_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/ib_bottom_dialog_gallery"
            android:text="@string/gallery" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>